kubernetes/deploy.example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: base64bender
  namespace: base64bender
  labels:
    app: b64b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: b64b
  template:
    metadata:
      labels:
        app: b64b
    spec:
      containers:
        - name: base64bender
          image: ghcr.io/cristicriss17g/base64bender:latest
          resources:
            requests:
              memory: '64Mi'
              cpu: '250m'
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 80
